# thestaccato.github.io

./: .gitignore  CMakeLists.txt  README.md  config.toml
.github/workflows/: ci.yml
assets/css/: main.css
content/: 404.md  _index.md  config.toml  index.md
content/documentation/: index.md
content/posts/: index.md
content/projects/: _index.md
content/publications/: index.md
content/software/: index.md
sass/css/: _footer.scss  _main.scss  _themes.scss  style.scss
src/: collections.cpp  collections.h  config.cpp  config.h  frontmatter.cpp  frontmatter.h  main.cpp  markdown.cpp  markdown.h  server.cpp  server.h  site_builder.cpp  site_builder.h  template_engine.cpp  template_engine.h  utils.cpp  utils.h
templates/: 404.html  base.html  index.html  page.html  section.html
templates/includes/: archive-single-cv.html  archive-single-talk-cv.html  archive-single-talk.html  archive-single.html  author-profile.html  base_path  footer.html  head.html  masthead.html  page__taxonomy.html  read-time.html  sidebar.html
templates/layouts/: archive.html  default.html  single.html  splash.html  talk.html
templates/partials/: footer.html
